Fixed notification display if alert wraps line

--- a/css/theme.css
+++ b/css/theme.css
@@ -970,6 +970,7 @@ a:hover, a:focus {
 .dropdown-menu >li > a {
   font-size: 12px;
   color: #686868;
+  white-space: normal;
 }
 .dropdown-menu >li > a .fa{margin-right: 3px;}
 
